Day01 was not saved completely

--- a/LLM_FOR_BASIC/Day01_02_Autograd.ipynb
+++ b/LLM_FOR_BASIC/Day01_02_Autograd.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "34f84995",
    "metadata": {},
    "outputs": [],
@@ -223,6 +223,28 @@
     "        # 부모들에게 전파 (도미노!)\n",
     "        for parent in self._prev:\n",
     "            parent.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "eeeaa6bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = Tensor([[2.0]], requires_grad=True)\n",
+    "y = x.mul(x)  # y = x²\n",
+    "\n",
+    "y.backward()\n",
+    "print(x.grad)  # [[4.0]] 나와야 함"
    ]
   }
  ],
