--- a/LLM_FOR_BASIC/Day02_Linear Layer.ipynb
+++ b/LLM_FOR_BASIC/Day02_Linear Layer.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "ce351762",
    "metadata": {},
    "outputs": [
@@ -194,21 +194,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "grad_x: [[-0.038205279889263644, -0.060256622854173617, 0.037566557011096444]]\n",
+      "Forward output: [[-0.3763499484922124, -0.0522521570900647]]\n",
+      "\n",
+      "Backward:\n",
+      "grad_x: [[0.011984533873220543, -0.12174897689911444, -0.06569622855242292]]\n",
       "grad_W: [[1.0, 1.0], [2.0, 2.0], [3.0, 3.0]]\n",
       "grad_b: [1.0, 1.0]\n"
      ]
     }
    ],
    "source": [
+    "# Tensor 클래스 import (Day 1에서 만든 것)\n",
+    "\n",
+    "# Linear 생성\n",
+    "layer = Linear(3, 2)\n",
+    "\n",
     "# Forward\n",
     "x = Tensor([[1.0, 2.0, 3.0]])\n",
     "y = layer.forward(x)\n",
+    "print(\"Forward output:\", y.data)\n",
     "\n",
     "# Backward\n",
-    "grad_output = Tensor([[1.0, 1.0]])  # 임의의 gradient\n",
+    "grad_output = Tensor([[1.0, 1.0]])\n",
     "grad_x = layer.backward(grad_output)\n",
     "\n",
+    "print(\"\\nBackward:\")\n",
     "print(\"grad_x:\", grad_x.data)\n",
     "print(\"grad_W:\", layer.grad_W)\n",
     "print(\"grad_b:\", layer.grad_b)"
